<package format="3">
  <name>behaviortree_forest</name>
  <version>0.0.1</version>
  <description>
  This package provides the BehaviorTree Forest functionality to Control, monitor and synchronize multiple BehaviorTree nodes.
  </description>

  <maintainer email="david.calero@eurecat.org">David Calero</maintainer>
  <maintainer email="devis.dalmoro@eurecat.org">Devis Dal Moro</maintainer>
  <license>MIT</license>
  <author>David Calero</author>
  <author>Devis Dal Moro</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <depend>libboost-dev</depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_srvs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>generate_parameter_library</depend>
  <depend>btcpp_ros2_interfaces</depend>
  <depend>behaviortree_ros2</depend>
  <depend>behaviortree_forest_interfaces</depend>
  
<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
