<package format="3">
  <name>behaviortree_forest_interfaces</name>
  <version>0.0.1</version>
  <description>
  BehaviorTree Forest interfaces, used in behaviorTree_Forest package
  </description>

  <maintainer email="david.calero@eurecat.org">David Calero</maintainer>
  <maintainer email="devis.dalmoro@eurecat.org">Devis Dal Moro</maintainer>
  <license>MIT</license>
  <author>David Calero</author>
  <author>Devis Dal Moro</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
